# DebuggerEngine

./: .buildprocess  .gitignore  .structure  CMakeLists.txt  LICENSE
docs/: build process.md  structure.md
examples/cli_demo/: CMakeLists.txt  main.cpp
include/DebuggerEngine/: DebuggerEngine.h
src/: DebuggerEngine.cpp  IOManager.cpp  IOManager.h  PtraceController.cpp  PtraceController.h  SymbolResolver.cpp  SymbolResolver.h  version.cpp
src/internal/: DebuggerEngine_impl.h
tests/: CMakeLists.txt
tests/PtraceController/: test_ptrace_controller.cpp  test_target.cpp
